crates/php-parser/tests/snapshots/nikic_scalar_tests__nikic_scalar_invalidoctal_2.snap
---
source: crates/php-parser/tests/nikic_scalar_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Int": 787
          },
          "span": {
            "start": 6,
            "end": 10
          }
        }
      },
      "span": {
        "start": 6,
        "end": 11
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 11
  }
}
