crates/php-parser/tests/snapshots/nikic_scalar_tests__nikic_scalar_numberseparators.snap
---
source: crates/php-parser/tests/nikic_scalar_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Float": 6.674083e-11
          },
          "span": {
            "start": 7,
            "end": 20
          }
        }
      },
      "span": {
        "start": 7,
        "end": 22
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Int": 299792458
          },
          "span": {
            "start": 22,
            "end": 33
          }
        }
      },
      "span": {
        "start": 22,
        "end": 35
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Int": 2063527949
          },
          "span": {
            "start": 35,
            "end": 46
          }
        }
      },
      "span": {
        "start": 35,
        "end": 48
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Int": 95
          },
          "span": {
            "start": 48,
            "end": 59
          }
        }
      },
      "span": {
        "start": 48,
        "end": 61
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Int": 137041
          },
          "span": {
            "start": 61,
            "end": 69
          }
        }
      },
      "span": {
        "start": 61,
        "end": 105
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Identifier": "_100"
          },
          "span": {
            "start": 105,
            "end": 109
          }
        }
      },
      "span": {
        "start": 105,
        "end": 129
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Int": 100
          },
          "span": {
            "start": 129,
            "end": 132
          }
        }
      },
      "span": {
        "start": 129,
        "end": 132
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Identifier": "_"
          },
          "span": {
            "start": 132,
            "end": 133
          }
        }
      },
      "span": {
        "start": 132,
        "end": 135
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Int": 1
          },
          "span": {
            "start": 135,
            "end": 136
          }
        }
      },
      "span": {
        "start": 135,
        "end": 136
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Identifier": "__1"
          },
          "span": {
            "start": 136,
            "end": 139
          }
        }
      },
      "span": {
        "start": 136,
        "end": 141
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Int": 1
          },
          "span": {
            "start": 141,
            "end": 142
          }
        }
      },
      "span": {
        "start": 141,
        "end": 142
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Identifier": "_"
          },
          "span": {
            "start": 142,
            "end": 143
          }
        }
      },
      "span": {
        "start": 142,
        "end": 143
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Float": 0.0
          },
          "span": {
            "start": 143,
            "end": 145
          }
        }
      },
      "span": {
        "start": 143,
        "end": 147
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Int": 0
          },
          "span": {
            "start": 147,
            "end": 149
          }
        }
      },
      "span": {
        "start": 147,
        "end": 149
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Identifier": "_0"
          },
          "span": {
            "start": 149,
            "end": 151
          }
        }
      },
      "span": {
        "start": 149,
        "end": 153
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Int": 0
          },
          "span": {
            "start": 153,
            "end": 155
          }
        }
      },
      "span": {
        "start": 153,
        "end": 155
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Identifier": "_123"
          },
          "span": {
            "start": 155,
            "end": 159
          }
        }
      },
      "span": {
        "start": 155,
        "end": 161
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Int": 0
          },
          "span": {
            "start": 161,
            "end": 163
          }
        }
      },
      "span": {
        "start": 161,
        "end": 163
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Identifier": "_101"
          },
          "span": {
            "start": 163,
            "end": 167
          }
        }
      },
      "span": {
        "start": 163,
        "end": 169
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Int": 1
          },
          "span": {
            "start": 169,
            "end": 170
          }
        }
      },
      "span": {
        "start": 169,
        "end": 170
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Identifier": "_e2"
          },
          "span": {
            "start": 170,
            "end": 173
          }
        }
      },
      "span": {
        "start": 170,
        "end": 175
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Int": 0
          },
          "span": {
            "start": 175,
            "end": 177
          }
        }
      },
      "span": {
        "start": 175,
        "end": 177
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Identifier": "_2"
          },
          "span": {
            "start": 177,
            "end": 179
          }
        }
      },
      "span": {
        "start": 177,
        "end": 180
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 180
  }
}
